# Xray-diagnosis

./: .gitignore  README.md  all_0s.py  gather_pseudo_data.py  pseudo_label.py  pseudo_train.py  resnet.py  test.py  train.py  train.sh
Cpp/: CMakeLists.txt  README.md  execute.sh
Cpp/include/: OpenCV_Torch.hpp  dataset.hpp  resnet.hpp  scalarCNN.hpp  utils.hpp
Cpp/logs/: LOSS_First_Resnet18.txt
Cpp/preproc/: concat_parts.py  concat_parts.sh  npy_to_pt.py  npy_to_pt.sh  save_images.py  save_images1.sh  save_images2.sh  save_images3.sh
Cpp/src/: dataset.cpp  resnet.cpp  scalarCNN.cpp  test.cpp  train.cpp  utils.cpp
Cpp/src/preproc/: SaveData.cpp
Cpp/src/utils/: OpenCV_Torch.cpp
Cpp/weights/: resnet18_epoch10.pt
data/: NANs_for_idx0.pt
models/: all_0s.py  cnn_scalar.py
preproc/: create_nan_data_loader.sh  create_nan_data_module.py  example.sbatch  npy_to_pt.py  save_images.py  save_images.sh  save_labels.py
